[project]
name = "qmle"
version = "0.1.0"
requires-python = ">=3.7.1,<3.12"
description = "Q-Learning with MLE"
authors = [{name = "Arash Tavakoli"}]
readme = "README.md"
license="MIT"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "wandb>=0.13.3,<0.15.0",
    "gym[classic_control]==0.23.1",
    "numpy>=1.22,<2.0",
    "tensorboard>=2.10.0,<3.0.0",
    "dm-control>=1.0,<2.0",
    "pyglet>=1.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
